# rules_proto

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod
.bazelci/: presubmit.yml
example/: BUILD.bazel
example/golden/: BUILD.bazel  prebuilt.WORKSPACE
example/golden/testdata/protoc_gen_doc/: BUILD.bazel  BUILD.in  WORKSPACE  example.proto
example/golden/testdata/protoc_gen_validate/: BUILD.in  BUILD.out
example/golden/testdata/protoc_gen_validate2/: BUILD  BUILD.in  WORKSPACE  example.proto  imports.csv
example/person/: BUILD.bazel
example/place/: BUILD.bazel
example/thing/: BUILD.bazel
language/protobuf/: BUILD.bazel  protobuf.go
pkg/: BUILD.bazel
pkg/plugin/cadence/protoc-gen-cadence-aip-go/: BUILD.bazel  protoc-gen-cadence-aip-go.go
pkg/plugin/einride/protoc-gen-go-aip/: BUILD.bazel  protoc-gen-go-aip.go
pkg/plugin/envoyproxy/protoc-gen-validate/: BUILD.bazel  protoc-gen-validate.go
pkg/plugin/grpc/grpcweb/: protoc-gen-grpc-web.go
pkg/plugin/grpcecosystem/grpcgateway/: BUILD.bazel
pkg/plugin/pseudomuto/protoc-gen-doc/: BUILD.bazel  protoc-gen-doc.go
pkg/plugin/srikrsna/protoc-gen-gotag/: BUILD.bazel  protoc-gen-gotag.go
pkg/plugin/stephenh/ts-proto/: protoc-gen-ts-proto.go
plugin/: BUILD.bazel
plugin/cadence/protoc-gen-cadence-aip-go/: BUILD.bazel
plugin/einride/protoc-gen-go-aip/: BUILD.bazel
plugin/envoyproxy/protoc-gen-validate/: BUILD.bazel
plugin/grpc-ecosystem/grpc-gateway/: BUILD.bazel
plugin/grpc-ecosystem/grpc-gateway-ts/: BUILD.bazel
plugin/grpc/grpc-web/: BUILD.bazel
plugin/pseudomuto/protoc-gen-doc/: BUILD.bazel  markdown.tmpl
plugin/srikrsna/protoc-gen-gotag/: BUILD.bazel
rules/: proto_gazelle.bzl
rules/private/: list_repository_tools_srcs.go  proto_repository_tools.bzl  proto_repository_tools_srcs.bzl
