load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

proto_plugin(
    name = "protoc-gen-cadence-aip-go",
    options = ["paths=source_relative"],
    tool = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@com_github_cadence_protoc_gen_cadence_aip_go_darwin_x86_64//:file",
        "@bazel_tools//src/conditions:darwin_x86_64": "@com_github_cadence_protoc_gen_cadence_aip_go_darwin_x86_64//:file",
        "@bazel_tools//src/conditions:linux_x86_64": "@com_github_cadence_protoc_gen_cadence_aip_go_linux_x86_64//:file",
        "@bazel_tools//src/conditions:windows": "@com_github_cadence_protoc_gen_cadence_aip_go_windows_x86_64//:file",
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = ["BUILD.bazel"],
    visibility = ["//plugin:__pkg__"],
)
