load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

proto_plugin(
    name = "protoc-gen-go-aip",
    options = ["paths=source_relative"],
    tool = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@com_github_einride_protoc_gen_go_aip_v0_60_darwin_x86_64//:file",
        "@bazel_tools//src/conditions:darwin_x86_64": "@com_github_einride_protoc_gen_go_aip_v0_60_darwin_x86_64//:file",
        "@bazel_tools//src/conditions:linux_x86_64": "@com_github_einride_protoc_gen_go_aip_v0_60_linux_x86_64//:file",
        "@bazel_tools//src/conditions:windows": "@com_github_einride_protoc_gen_go_aip_v0_60_windows_x86_64//:file",
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = ["BUILD.bazel"],
    visibility = ["//plugin:__pkg__"],
)
