load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

proto_plugin(
    name = "protoc-gen-validate",
    options = ["paths=source_relative"],
    tool = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@envoyproxy_protoc_gen_validate_v1_0_1_darwin_x86_64//:protoc-gen-validate-go",
        "@bazel_tools//src/conditions:darwin_x86_64": "@envoyproxy_protoc_gen_validate_v1_0_1_darwin_x86_64//:protoc-gen-validate-go",
        "@bazel_tools//src/conditions:linux_x86_64": "@envoyproxy_protoc_gen_validate_v1_0_1_linux_x86_64//:protoc-gen-validate-go",
        "@bazel_tools//src/conditions:windows": "@envoyproxy_protoc_gen_validate_v1_0_1_windows_x86_64//:protoc-gen-validate-go",
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = ["BUILD.bazel"],
    visibility = ["//plugin:__pkg__"],
)
