load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

proto_plugin(
    name = "protoc-gen-doc",
    data = [":markdown.tmpl"],
    direct_mode = True,
    tool = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@com_github_pseudomuto_protoc_gen_doc_v1_5_1_darwin_x86_64//:file",
        "@bazel_tools//src/conditions:darwin_x86_64": "@com_github_pseudomuto_protoc_gen_doc_v1_5_1_darwin_x86_64//:file",
        "@bazel_tools//src/conditions:linux_x86_64": "@com_github_pseudomuto_protoc_gen_doc_v1_5_1_linux_x86_64//:file",
        "@bazel_tools//src/conditions:windows": "@com_github_pseudomuto_protoc_gen_doc_v1_5_1_windows_x86_64//:file",
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "markdown.tmpl",
    ],
    visibility = ["//plugin:__pkg__"],
)
