load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

proto_plugin(
    name = "protoc-gen-gotag",
    options = ["paths=source_relative"],
    tool = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@srikrsna_protoc_gen_gotag_v0_6_2_darwin_x86_64//file",
        "@bazel_tools//src/conditions:darwin_x86_64": "@srikrsna_protoc_gen_gotag_v0_6_2_darwin_x86_64//file",
        "@bazel_tools//src/conditions:linux_x86_64": "@srikrsna_protoc_gen_gotag_v0_6_2_linux_x86_64//file",
        "@bazel_tools//src/conditions:windows": "@srikrsna_protoc_gen_gotag_v0_6_2_windows_x86_64//file",
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = ["BUILD.bazel"],
    visibility = ["//plugin:__pkg__"],
)
