load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

# gazelle:proto_rule proto_compile implementation stackb:rules_proto:proto_compile
# gazelle:proto_plugin protoc-gen-doc implementation pseudomuto:protoc-gen-doc
# gazelle:proto_language markdown rule proto_compile
# gazelle:proto_language markdown plugin protoc-gen-doc

load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@build_stack_rules_proto//rules:proto_gazelle.bzl", "DEFAULT_LANGUAGES", "proto_gazelle")

gazelle_binary(
    name = "gazelle-protobuf",
    languages = DEFAULT_LANGUAGES,
)

proto_gazelle(
    name = "gazelle",
    command = "update",
    gazelle = ":gazelle-protobuf",
)

proto_library(
    name = "pb_proto",
    srcs = ["example.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "pb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "./",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "pb",
    embed = [":pb_go_proto"],
    importpath = "./",
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "pb_markdown_compile",
    options = {"@build_stack_rules_proto//plugin/pseudomuto/protoc-gen-doc": ["external/build_stack_rules_proto/plugin/pseudomuto/protoc-gen-doc/markdown.tmpl,example.pb.md,source_relative"]},
    outputs = ["example.pb.md"],
    plugins = ["@build_stack_rules_proto//plugin/pseudomuto/protoc-gen-doc"],
    proto = "pb_proto",
)
