load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protoc-gen-validate",
    srcs = ["protoc-gen-validate.go"],
    importpath = "github.com/stackb/rules_proto/pkg/plugin/envoyproxy/protoc-gen-validate",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/protoc",
        "@bazel_gazelle//label:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
    ] + glob(["*.go"]),
    visibility = ["//pkg:__pkg__"],
)
