load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protoc-gen-doc",
    srcs = ["protoc-gen-doc.go"],
    importpath = "github.com/stackb/rules_proto/pkg/plugin/pseudomuto/protoc-gen-doc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/plugin/golang/protobuf",
        "//pkg/protoc",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
    ] + glob(["*.go"]),
    visibility = ["//pkg:__pkg__"],
)
